--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 -*- Indented-Text -*-
 
-$Id: README,v 4.2 1996/04/26 13:24:05 mj Exp $
+$Id: README,v 4.3 1996/05/01 17:31:46 mj Exp $
 
 ----------------------------------------------------------------------
 				   
@@ -28,8 +28,6 @@ Major changes in FIDOGATE 4.0:
 
 * Gateway can now work under the same main address as the tosser
   (config.gate: Address == Uplink).
-
-* A lot of new config options (see examples/...).
 
 * If the KillXXXX options are not specified, ftntoss will put bad
   messages into packets in SPOOLDIR/toss/bad.
@@ -59,9 +57,12 @@ Compiling:
 
 Installing:
 
-1.  Type "make install-dirs" to create the necessary directories if
-    needed
-2.  Type "make install"
+1.  Type "make install-dirs" to create the installation directories
+    (only if needed)
+2.  Type "make install-history" to create an empty MSGID history
+    database (only if needed). WARNING: zeros existing database!
+3.  Type "make install" to install the programs
+4.  Create the various config files and put them into LIBDIR
 
 ----------------------------------------------------------------------
 
@@ -77,4 +78,4 @@ for subscription.
 
 ----------------------------------------------------------------------
 
-Martin Junius <mj@fido.de>, $Date: 1996/04/26 13:24:05 $
+Martin Junius <mj@fido.de>, $Date: 1996/05/01 17:31:46 $
