--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 -*- Indented-Text -*- :ts=8
 
-X = for release 4.0alpha1
+X = for release 4.0alpha2
+
+	* ftntoss: create empty history database, if it doesn't exist?
+
+	* ffx*: log messages of activities.
 
 	* ftn2rfc: bounce messages should include the complete FTN
 	  message with all kludges etc. to ease debugging.
