--- a/TODO
+++ b/TODO
@@ -2,9 +2,11 @@
 
 X = for release 4.0alpha2
 
-	* ftntoss: create empty history database, if it doesn't exist?
+DONE.	* ftnexpire: add some statistics output
 
-X	* ffx*: log messages of activities.
+DONE.	* ftntoss: create empty history database, if it doesn't exist
+
+DONE.	* ffx*: log messages of activities.
 
 	* ftn2rfc: bounce messages should include the complete FTN
 	  message with all kludges etc. to ease debugging.
@@ -71,3 +73,6 @@ DONE.
 
 OS2	* MSDOS, OS/2 port: switch stdin to binary mode. Command line option?
 DONE.	  Problems with news batches (GD030V)?
+
+	* ftn2rfc, rfc2ftn: passthru operation for FTN messages, in
+	  particular EchoMail control information.
